# ndarray-einsum

./: Cargo.toml  NOTICE  README.md
.github/workflows/: main.yml
benches/: bench.rs
src/: lib.rs  optimizers.rs  validation.rs
src/contractors/: mod.rs  pair_contractors.rs  singleton_contractors.rs  strategies.rs
tests/: einsum_test.rs
