[package]
name = "ndarray-einsum"
version = "0.8.0"
edition = "2021"
rust-version = "1.65"
license = "Apache-2.0"
authors = ["oracleofnj <jared.samet@aya.yale.edu>", "Matthew Treinish <mtreinish@kortar.org>"]
repository = "https://github.com/mtreinish/ndarray-einsum"
keywords = ["einsum", "einstein-summation", "tensor", "contraction", "ndarray"]
categories = ["science"]
description = "Implementation of the einsum function for the Rust ndarray crate. Fork of https://github.com/oracleofnj/einsum"

[dependencies]
regex = "1"
lazy_static = "1"
ndarray = { version = "0.17", features = ["approx"] }
num-traits = "0.2"
hashbrown = "0.15"

[dev-dependencies]
approx = "0.5"
ndarray-rand = "0.16.0"
rand="0.9"

[profile.release]
lto = true

[package.metadata.docs.rs]
rustdoc-args = [ "--document-private-items" ]

